@@ -149,6 +149,7 @@ WHAT IS NEW?
     * "lookup ancestor" [James]
     * "get stat name" [Ralph]
     * "pathfind into extra as hero" and "pathfind into extra as npc" [James]
+    * "is shop buy menu empty" and "is shop hire menu empty" [James]
 
   *** Changes
     * Removed support for optional prefixes on .ini config settings (e.g.
